--- a/item.html
+++ b/item.html
@@ -5,14 +5,14 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout.2a2c0e33.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout.8f1aecab.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.98b4ea60.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.abb847df.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.db2ec631.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.fcb6eb8a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.fa03ec31.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.18e36cef.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.43d5a016.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.b7a6171a.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.4884e569.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.5f62007e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.590b4bf3.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.4d086e63.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/item-page.svelte.0beafdb3.js">
@@ -22,15 +22,15 @@
 		<div style="display: contents">
 
 
-<div class="container svelte-1go3062"><nav class="svelte-1go3062"><b class="svelte-1go3062"><a href="/hnfetch/" class="svelte-1go3062">Hacker Fetch</a></b></nav>
-	<main class="svelte-1go3062"><span id="loading" class="svelte-10y9sv7">loading...</span></main>
+<div class="container svelte-tnwaf5"><nav class="svelte-tnwaf5"><b class="svelte-tnwaf5"><a href="/hnfetch/" class="svelte-tnwaf5">Hacker Fetch</a></b></nav>
+	<main class="svelte-tnwaf5"><span id="loading" class="svelte-10y9sv7">loading...</span></main>
 </div>
 
 
 			
 			<script>
 				{
-					__sveltekit_1h7b5ve = {
+					__sveltekit_fh7srb = {
 						assets: "/hnfetch",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -41,8 +41,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.abb847df.js"),
-						import("./_app/immutable/entry/app.43d5a016.js")
+						import("./_app/immutable/entry/start.db2ec631.js"),
+						import("./_app/immutable/entry/app.590b4bf3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
