--- a/index.html
+++ b/index.html
@@ -2,53 +2,32 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="/hnfetch/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout.2a2c0e33.css" rel="stylesheet">
-		<link href="./_app/immutable/assets/_page.26595c38.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.abb847df.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.fcb6eb8a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.fa03ec31.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.18e36cef.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.43d5a016.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.b7a6171a.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.984db11e.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_page.svelte.25cc6322.js">
+		<link rel="modulepreload" href="/hnfetch/_app/immutable/entry/start.db2ec631.js">
+		<link rel="modulepreload" href="/hnfetch/_app/immutable/chunks/index.fcb6eb8a.js">
+		<link rel="modulepreload" href="/hnfetch/_app/immutable/chunks/singletons.4884e569.js">
+		<link rel="modulepreload" href="/hnfetch/_app/immutable/chunks/paths.5f62007e.js">
+		<link rel="modulepreload" href="/hnfetch/_app/immutable/entry/app.590b4bf3.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
-
-
-<div class="container svelte-1go3062"><nav class="svelte-1go3062"><b class="svelte-1go3062"><a href="/hnfetch/" class="svelte-1go3062">Hacker Fetch</a></b></nav>
-	<main class="svelte-1go3062"><input class=" svelte-kk4soe" placeholder="Enter a comment ID or link..."></main>
-</div>
-
-
-			
 			<script>
 				{
-					__sveltekit_1h7b5ve = {
+					__sveltekit_fh7srb = {
 						assets: "/hnfetch",
-						base: new URL(".", location).pathname.slice(0, -1),
+						base: "/hnfetch",
 						env: {}
 					};
 
 					const element = document.currentScript.parentElement;
 
-					const data = [null,null];
-
 					Promise.all([
-						import("./_app/immutable/entry/start.abb847df.js"),
-						import("./_app/immutable/entry/app.43d5a016.js")
+						import("/hnfetch/_app/immutable/entry/start.db2ec631.js"),
+						import("/hnfetch/_app/immutable/entry/app.590b4bf3.js")
 					]).then(([kit, app]) => {
-						kit.start(app, element, {
-							node_ids: [0, 2],
-							data,
-							form: null,
-							error: null
-						});
+						kit.start(app, element);
 					});
 				}
 			</script>
