--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/hnfetch/favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="/hnfetch/_app/immutable/entry/start.db2ec631.js">
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="/hnfetch/favicon.png" />
+  <meta name="viewport" content="width=device-width" />
+  <title>Hacker Fetch</title>
+  <meta http-equiv="content-security-policy" content="">
+		<link rel="modulepreload" href="/hnfetch/_app/immutable/entry/start.285f0b42.js">
 		<link rel="modulepreload" href="/hnfetch/_app/immutable/chunks/index.fcb6eb8a.js">
-		<link rel="modulepreload" href="/hnfetch/_app/immutable/chunks/singletons.4884e569.js">
-		<link rel="modulepreload" href="/hnfetch/_app/immutable/chunks/paths.5f62007e.js">
-		<link rel="modulepreload" href="/hnfetch/_app/immutable/entry/app.590b4bf3.js">
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">
+		<link rel="modulepreload" href="/hnfetch/_app/immutable/chunks/singletons.876d875e.js">
+		<link rel="modulepreload" href="/hnfetch/_app/immutable/chunks/paths.38b61a1b.js">
+		<link rel="modulepreload" href="/hnfetch/_app/immutable/entry/app.79d689b1.js">
+</head>
+
+<body data-sveltekit-preload-data="hover">
+  <div style="display: contents">
 			<script>
 				{
-					__sveltekit_fh7srb = {
+					__sveltekit_1ysk8ls = {
 						assets: "/hnfetch",
 						base: "/hnfetch",
 						env: {}
@@ -24,13 +27,14 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/hnfetch/_app/immutable/entry/start.db2ec631.js"),
-						import("/hnfetch/_app/immutable/entry/app.590b4bf3.js")
+						import("/hnfetch/_app/immutable/entry/start.285f0b42.js"),
+						import("/hnfetch/_app/immutable/entry/app.79d689b1.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
 				}
 			</script>
 		</div>
-	</body>
+</body>
+
 </html>
