--- a/item.html
+++ b/item.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
-		<meta name="viewport" content="width=device-width" />
-		<meta http-equiv="content-security-policy" content="">
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="./favicon.png" />
+  <meta name="viewport" content="width=device-width" />
+  <title>Hacker Fetch</title>
+  <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout.8f1aecab.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/_page.98b4ea60.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.db2ec631.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.285f0b42.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.fcb6eb8a.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.4884e569.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/paths.5f62007e.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.590b4bf3.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.4d086e63.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.876d875e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/paths.38b61a1b.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.79d689b1.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/_layout.svelte.4cd421d7.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/_layout.ts.984db11e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout.da46b06b.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/item-page.svelte.0beafdb3.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/item-page.ts.4ed993c7.js">
-	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">
+</head>
+
+<body data-sveltekit-preload-data="hover">
+  <div style="display: contents">
 
 
 <div class="container svelte-tnwaf5"><nav class="svelte-tnwaf5"><b class="svelte-tnwaf5"><a href="/hnfetch/" class="svelte-tnwaf5">Hacker Fetch</a></b></nav>
@@ -30,7 +33,7 @@
 			
 			<script>
 				{
-					__sveltekit_fh7srb = {
+					__sveltekit_1ysk8ls = {
 						assets: "/hnfetch",
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
@@ -41,8 +44,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.db2ec631.js"),
-						import("./_app/immutable/entry/app.590b4bf3.js")
+						import("./_app/immutable/entry/start.285f0b42.js"),
+						import("./_app/immutable/entry/app.79d689b1.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
@@ -54,5 +57,6 @@
 				}
 			</script>
 		</div>
-	</body>
+</body>
+
 </html>
